syntax = "proto3";

import "reservation.proto";
import "card.proto";
import "address.proto";

service UserService {
    rpc List (EmptyUser) returns (UserList) {}
    rpc Insert (User) returns (UserBase) {}
    rpc Get (UserId) returns (UserGet){}
    rpc Update (User) returns (UserBase){}
    rpc Delete (UserReservation) returns (UserBase){}
    rpc UpdateMembership(UserReservation) returns (EmptyUser){}
    rpc GetRes (UserReservation) returns (ResList){}

}
message EmptyUser {}

message User {
   string _id = 1;
   string NAME = 2;
   string DL_STATE = 3;
   int32 DL_NUMBER =4;
   string EMAIL = 5;
   int32 PHONE = 6;
   string PASSWORD = 7;
   Address ADDRESS = 8;
   string MEMBERSHIP_START = 9;
   string RESERVATIONS = 10;
   string CREATED = 11;
   string MODIFIED = 12;
   string USER_TYPE=13;
}

message UserGet {
   string _id = 1;
   string NAME = 2;
   string DL_STATE = 3;
   int32 DL_NUMBER =4;
   string EMAIL = 5;
   int32 PHONE = 6;
   string PASSWORD = 7;
   Address ADDRESS = 8;
   string MEMBERSHIP_START = 9;
   repeated Reservation RESERVATIONS = 10;
   repeated Card CARDS = 11;
   string CREATED = 12;
   string MODIFIED = 13;
   string USER_TYPE = 14;
}

message UserBase {
   string _id = 1;
   string NAME = 2;
   string DL_STATE = 3;
   int32 DL_NUMBER =4;
   string EMAIL = 5;
   int32 PHONE = 6;
   string PASSWORD = 7;
   string ADDRESS = 8;
   string MEMBERSHIP_START = 9;
   repeated string RESERVATIONS = 10;
   repeated string CARDS = 11;
   string CREATED = 12;
   string MODIFIED = 13;
}

message UserList {
   repeated UserGet users = 1;
}
message UserReservation{
   string _id=1;
   }
message UserId {
  string email = 1;
  string password=2;
}


message ResList{
 string _id = 1;
   string NAME = 2;
   string DL_STATE = 3;
   int32 DL_NUMBER =4;
   string EMAIL = 5;
   int32 PHONE = 6;
   string PASSWORD = 7;
   Address ADDRESS = 8;
   string MEMBERSHIP_START = 9;
   repeated ReservationResponse RESERVATIONS = 10;
   repeated Card CARDS = 11;
   string CREATED = 12;
   string MODIFIED = 13;
   string USER_TYPE = 14;
}

